tests/fixtures/positive/potential-bugs/ExitOutsideMain.kt
package potentialbugs

import kotlin.system.exitProcess

class Example {
    fun cleanup() {
        exitProcess(0)
    }
}
