tests/fixtures/negative/potential-bugs/ExitOutsideMain.kt
package potentialbugs

import kotlin.system.exitProcess

fun main() {
    exitProcess(0)
}
